Actions
Bug #12105
closedlibsmbns: passing argument 1 to restrict-qualified parameter aliases with argument 4
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with gcc 8:
../common/smbns_ads.c: In function 'smb_ads_getfqhostname': ../common/smbns_ads.c:1290:6: error: passing argument 1 to restrict-qualified parameter aliases with argument 4 [-Werror=restrict] ah->domain); ^~ ../common/smbns_dyndns.c:2036:18: error: passing argument 1 to restrict-qualified parameter aliases with argument 4 [-Werror=restrict] (void) snprintf(fqhn, MAXHOSTNAMELEN, "%s.%s", fqhn, fqdn); ^~~~ ~~~~ ../common/smbns_dyndns.c: In function 'dyndns_clear_rev_zone': ../common/smbns_dyndns.c:2117:18: error: passing argument 1 to restrict-qualified parameter aliases with argument 4 [-Werror=restrict] (void) snprintf(fqhn, MAXHOSTNAMELEN, "%s.%s", fqhn, fqdn); ^~~~ ~~~~ cc1: all warnings being treated as errors
Testing done: build/install/boot (my smb server seems to behave ok).
Updated by Electric Monk almost 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 790596015610f2e87846342a497f6ee558379163
commit 790596015610f2e87846342a497f6ee558379163 Author: Toomas Soome <tsoome@me.com> Date: 2020-07-19T16:24:23.000Z 12105 libsmbns: passing argument 1 to restrict-qualified parameter aliases with argument 4 Reviewed by: Andy Fiddaman <andy@omniosce.org> Reviewed by: C Fraire <cfraire@me.com> Reviewed by: Matthias Scheler <mscheler@tintri.com> Approved by: Robert Mustacchi <rm@fingolfin.org>
Actions